--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">La Marmite dorées</a></h1>
+							<h1 id="logo"><a href="index.html">La Marmite dorée</a></h1>
 							<p>Fabrication artisanale de bijoux</p>
 
 						<!-- Nav -->
